# working_time_tracker

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
frontend/tracker-web/: Dockerfile  package-lock.json  package.json
frontend/tracker-web/src/: App.css  App.js  App.jsx  UserContext.js
frontend/tracker-web/src/components/: AddProjectButton.jsx  Header.js  (+13 more)
working_time_tracker/: create_superuser.py  manage.py
working_time_tracker/custom_auth/: serializers.py  urls.py  views.py
working_time_tracker/tracker/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
working_time_tracker/tracker/migrations/: 0001_initial.py  0002_project_task_track_userextension_delete_testexample.py  0003_alter_project_created_at_alter_task_created_at_and_more.py  0003_alter_track_task_alter_track_user.py  0004_alter_track_status.py  0004_remove_task_user_task_assignee_task_reporter_and_more.py  0005_remove_task_is_completed_remove_task_is_in_progress_and_more.py  0006_project_created_at_task_created_at.py
working_time_tracker/tracker/serializers/: project.py  project_serializers.py  report.py  task.py  task_serializers.py  track.py  track_serializers.py  user.py  user_serializers.py
working_time_tracker/tracker/services/: reports.py  tracks.py
working_time_tracker/tracker/views/: base.py  project.py  project_views.py  report.py  task.py  task_views.py  track.py  track_views.py  user.py  user_views.py
working_time_tracker/users/: urls.py  views.py
working_time_tracker/utils/: create_superuser.py
working_time_tracker/working_time_tracker/: asgi.py  config.py  settings.py  urls.py  wsgi.py
(+23 files in other folders)
